Fix bug #52808 (Segfault when specifying interval as two dates)